platform/infrastructure/networking/gateway-class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-proxy
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
